--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,22 @@
+@'
+# Gradle
+.gradle/
+build/
+
+# Android Studio
+.idea/
 *.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
 local.properties
+
+# Kotlin / Java / OS
+*.class
+*.log
+*.keystore
+*.jks
+.DS_Store
+
+# NDK, outputs, captures
+.cxx/
+captures/
+output.json
+'@ > .gitignore
